--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "feather-icons-react": "^0.6.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
@@ -44,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.55.0"
   }
 }
